[package]
name = "rust_stdlinux"
version = "0.1.0"
authors = ["yuziroppe <yahata.dev@gmail.com>"]
edition = "2018"

[[bin]]
name = "cat"
path = "src/5/cat.rs"
opt-level = 3

[[bin]]
name = "wcl"
path = "src/5/wcl.rs"
opt-level = 3

[[bin]]
name = "cat_buf"
path = "src/6/cat_buf.rs"
opt-level = 3

[[bin]]
name = "head"
path = "src/7/head.rs"
opt-level = 3

[[bin]]
name = "head_opt"
path = "src/7/head_opt.rs"
opt-level = 1

[[bin]]
name = "grep"
path = "src/8/grep.rs"
opt-level = 1

[[bin]]
name = "ls"
path = "src/10/ls.rs"
opt-level = 1

[[bin]]
name = "mkdir"
path = "src/10/mkdir.rs"
opt-level = 1

[[bin]]
name = "rmdir"
path = "src/10/rmdir.rs"
opt-level = 1

[[bin]]
name = "ln"
path = "src/10/ln.rs"
opt-level = 1

[[bin]]
name = "symlink"
path = "src/10/symlink.rs"
opt-level = 1

[[bin]]
name = "rm"
path = "src/10/rm.rs"
opt-level = 1

[[bin]]
name = "mv"
path = "src/10/mv.rs"
opt-level = 1

[[bin]]
name = "stat"
path = "src/10/stat.rs"
opt-level = 1

[[bin]]
name = "chmod"
path = "src/10/chmod.rs"
opt-level = 1

[[bin]]
name = "tail"
path = "src/11/tail.rs"
opt-level = 1

[[bin]]
name = "spawn"
path = "src/12/spawn.rs"
opt-level = 1

[[bin]]
name = "sh"
path = "src/12/sh.rs"
opt-level = 3

[[bin]]
name ="sigint"
path = "src/13/sigint.rs"

[[bin]]
name ="lse"
path = "src/14/ls.rs"

[[bin]]
name = "daytime"
path = "src/15/daytime.rs"

[[bin]]
name = "server"
path = "src/17/server.rs"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
getopts = "0.2.21"
libc = "0.2.93"
nix = "0.20.0"
regex = "1.4.5"
whoami = "1.1.2"

