[package]
name = "rust_stdlinux"
version = "0.1.0"
authors = ["yuziroppe <yahata.dev@gmail.com>"]
edition = "2018"

[[bin]]
name = "cat"
path = "src/5/cat.rs"

[[bin]]
name = "wcl"
path = "src/5/wcl.rs"

[[bin]]
name = "cat_buf"
path = "src/6/cat_buf.rs"

[[bin]]
name = "head"
path = "src/7/head.rs"

[[bin]]
name = "head_opt"
path = "src/7/head_opt.rs"

[[bin]]
name = "grep"
path = "src/8/grep.rs"

[[bin]]
name = "ls"
path = "src/10/ls.rs"

[[bin]]
name = "mkdir"
path = "src/10/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/10/rmdir.rs"

[[bin]]
name = "ln"
path = "src/10/ln.rs"

[[bin]]
name = "symlink"
path = "src/10/symlink.rs"

[[bin]]
name = "rm"
path = "src/10/rm.rs"

[[bin]]
name = "mv"
path = "src/10/mv.rs"

[[bin]]
name = "stat"
path = "src/10/stat.rs"

[[bin]]
name = "chmod"
path = "src/10/chmod.rs"

[[bin]]
name = "tail"
path = "src/11/tail.rs"

[[bin]]
name = "spawn"
path = "src/12/spawn.rs"

[[bin]]
name = "sh"
path = "src/12/sh.rs"

[[bin]]
name ="sigint"
path = "src/13/sigint.rs"

[[bin]]
name ="lse"
path = "src/14/ls.rs"

[[bin]]
name = "daytime"
path = "src/15/daytime.rs"

[[bin]]
name = "server-io"
path = "src/16/server-io.rs"

[[bin]]
name = "server-socket"
path = "src/17/server-socket.rs"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
getopts = "0.2.21"
libc = "0.2.93"
nix = "0.20.0"
regex = "1.4.5"
whoami = "1.1.2"

